# test_rim

./: .gitignore  README.md  pyproject.toml
agent/: action_executor.py  app.py  config.py  demo_recorder.py  logger.py  overlay.py  screen_capture.py  window_manager.py
agent/perception/: locator.py  ocr.py  template_store.py  ui_map.py
agent/policy/: behavior_tree.py  tasks_basic.py
configs/: agent.yaml  model.yaml  reward.yaml  rl.yaml
rl/: eval.py  train.py
rl/algo/: bc.py  dagger.py  ppo.py  replay.py
rl/envs/: rimworld_wrapper.py  tasks.py
rl/models/: policy_head.py  value_head.py  vision_backbone.py
scripts/: sweep.py
tests/: test_env_stub.py  test_offline_detection.py
